@@ -11,6 +11,14 @@ power-pole-wire-reach-lighted-percent=The percentage of each power pole's wire r
 light-power-usage-watts=The power usage of each inbuilt light. When set to 0 watts no electrical network is required for them to work. Anything above 0 watts requires active electricity for them to work. A standard light is 5000 watts. Mod Default Setting = 0.
 turrets-lighted-edge-tiles=If all turrets are lighted and the number of tiles beyond the edge lit. Setting to 0 is just the turret size. Setting to -1 disables the feature. Use in early game only as once above 500 turrets it can slow down UPS/game speed. Mod Default Setting = -1
 
+
+
+
+[api-description]
+inbuilt-lighting-reset=Reset all inbuilt lighting on the map by removing everything and re-adding them
+
+
+
 [entity-name]
 hiddenlight-1=Inbuilt Light
 hiddenlight-2=Inbuilt Light
